--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,5 +11,37 @@ body {
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 .qinqii-thin-shadow {
-    box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.1);
+}
+
+.qinqii-shadow {
+    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.2);
+}
+.custom-outline-button {
+    background-color: transparent;
+    border: 1px solid #1890ff;
+    color: #1890ff;
+}
+.transparent-indicator {
+    background-color: rgba(256,256,256, 0.3);
+}
+.white-indicator {
+    background: white;
+}
+.loading-indicator {
+    
+    height: 100%;
+    width: 0;
+    animation: loadingIndicator 3s ease;
+}
+@keyframes loadingIndicator {
+    0%{
+        width: 0;
+        background-color: rgba(256,256,256, 0.3);
+
+    }
+    100%{
+        background-color: white;
+        width: 100%;
+    }
 }
