--- a/frontend/src/SCSS/Notification.scss
+++ b/frontend/src/SCSS/Notification.scss
@@ -1,7 +1,10 @@
 .notification {
     padding: 3px;
-    background: #fff;
-    // background: #f0f2f5;
+
+    background: white;
+
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     &_item {
         padding: 15px;
         border-top: 1px solid #f5f5f5;
@@ -16,10 +19,12 @@
     }
 }
 .notification_header {
+    background: white;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px;
-    background: #fff;
 }
 
